# muCRL

./: .gitignore  ClassPresent.java  INSTALL  Makefile.in  README.md  TestJava.java  config.hin  configure  configure.ac  sysdep.h  unix.c
absint/: Makefile.in  README
absint/doc/: Makefile.in  patterns.ps  theory.ps  tool.ps
absint/examples/.svn/: entries
absint/examples/BRP/: a_p2.mcl  a_p3.mcl  abs_list.mcrl  c_p1.mcl  c_p2.mcl  c_p3.mcl  c_p4.mcl
absint/examples/BRP/.svn/: entries
absint/examples/BRP/.svn/text-base/: a_p1.mcl.svn-base  a_p4.mcl.svn-base  brp.mcrl.svn-base  runAll.svn-base
absint/examples/Buffer/: a_P0.mcl  buffer.mcrl  runAll0  runAll1  runAll2
absint/examples/Buffer/.svn/: entries
absint/examples/Buffer/.svn/text-base/: a_P1.mcl.svn-base  a_P2.mcl.svn-base  a_P3.mcl.svn-base  a_P4.mcl.svn-base  abs_FIFO_Nat.mcrl.svn-base  abs_FIFO_countH.mcrl.svn-base
absint/examples/JavaSpaces/: runAll
absint/examples/JavaSpaces/.svn/: entries
absint/examples/JavaSpaces/.svn/text-base/: absTable.mcrl.svn-base  producerConsumer.mcrl.svn-base
absint/src/: Makefile.in  absLoader.c  absint.c  libAbsint.c  libAbsint.h
aterm2/: Makefile.in  atypes.h  encoding.h  gc.c  memory.c
checker/: Makefile.in
checker/doc/: MCparseModalFormula.3  MCparseModalFormula.sgml  Makefile.in  between.mcrl  between.noreg.mcf  between.reg.mcf  deadlock.mcf  deadlockfree.mcf  mucalculus.7  mucalculus.sgml
checker/src/: Makefile.in  libmcparse.c  libmcparse.h  mcfunc.c  mcfunc.h  mclexer.c  mclexer.h  mclexer.l  mcparse.c  mcparser.c  mcparser.h  mcparser.y  mucheck.c  pbes.c
data/: 1394-fin.mcrl  DKRleader1.mcrl  DKRleader2.mcrl  Makefile.in  abp.edt  abp.inv  abp.mcrl  abp.tbf  abp.txt  abpE.mcrl  bakery.mcrl  bke.mcrl  brp.aut  brp.mcrl  buf1.mcrl  ccp33.mcrl  chatbox.mcrl  chatboxt.mcrl  commprot.mcrl  dining.mcrl  garage.mcrl  hef_ok.mcrl  mutex.mcrl  onebit.mcrl  queue.mcrl  slip.mcrl  small1.mcrl  small2.mcrl  small3.mcrl  small4.mcrl  test1  test2  test3
doc/: Makefile.in  aterm_manual.ps
doc/src/: MCparseModalFormula.xml  Makefile.in  abp.xml  binary.xml  catalog.xml  common1.xml  common2.xml  confcheck.xml  constelm.xml  dates.xml  decluster.xml  dmp2dir.xml  ext.xml  ext1.xml  ext2.xml  ext3.xml  finish.xml  finish1.xml  finish2.xml  index.html  index.xml  instantiator.xml  instantiators.xml  invcheck.xml  invelm.xml  libmcrl.xml  librw.xml  libstep.xml  lts2dot.xml  ltscmp.xml  ltscp.xml  ltsmin.xml  mcrl.xml  msim.xml  mucalculus.xml  parelm.xml  pp.xml  reachelm.xml  renaming.xml  rewr.xml  (+44 more)
explicit/: Makefile.in  README  TODO
explicit/jsim/: Makefile.in  admin.sh  contact.in  jsim.in  manifest.txt
explicit/ltsmin/: Makefile.in  besmin.c  besreductions.c  besreductions.h  help.h  ks.c  ks.h  lowmem.c  lowmem.h  ltscmp.c  ltscp.c  ltsmin.c  setreductions.c  setreductions.h  simona-red-bes.c  simona-red.c  simona-red.h
explicit/src/: Makefile.in  array.c  array.h  aut-io.c  aut-io.h  bitset.c  bitset.h  data_io.c  data_io.h  db.h  dbstart.c  dinstantiate.c  dirsegment.c  discover.c  discover.h  dlts.c  dlts.h  dmp2dir.c  explore.c  explore.h  fifo.c  fifo.h  fifo0.c  fifo0_p.h  fifo1.c  fifo1_p.h  fifo_p.h  fork.c  generichash.h  generichash4.c  generichash8.c  inst_fork.h  instantiators.c  label.c  label.h  ltree.c  ltree.h  lts.c  lts2dot.c  memstat.c  (+39 more)
implicit/: Makefile.in
implicit/src/: Makefile.in  at_stack.c  at_stack.h  critpairs.c  unification.h  unification_linear.c  unification_master.c  unification_naive.c
java/: Makefile.in
lin/: Makefile.in  datatypes.c  lex.yy.c  main.c  tmcrl.h  tmcrl.l  tmcrl.y  y.tab.c
mcrlopen/: Makefile.in  README_mcrl_open  mcrl_open.c  mcrl_open.in
prover/: Makefile.in
prover/doc/: Makefile.in  prover.ps
prover/man/: Makefile.in
prover/man/man4/: confcheck.4  formcheck.4  invcheck.4  invelm.4  reachelm.4
prover/src/: GNUmakefile  Makefile.in  confcheck.c  confelm.c  finset.c  finset.h  formcheck.c  invcheck.c  invelm.c  libstategraph.c  lpo.c  lpo1.h  lpo2.h  lpo3.h  prover.c  prover.h  reachelm.c  signature.c  signature.h  stategraph.c  stateview.sh  usechange.c  usechange.h
scripts/: besmin_bes_to_cwi.py  cwi_to_besmin_bes.py
src/: GNUmakefile  Makefile.in  Rww.in  binary.c  compose.c  constelm.c  decluster.c  edit.h  edit.l  instantiator.c  jitty.c  jitty.h  jittyrw.c  labelfreq.c  liblts.c  libmcrl.c  librw.c  librww.c  libstep.c  libsubst.c  lps2mcrl.c  lts.h  mcrl.h  mcrl_sig.h  mcrlparse.h  mcrlparse.l  msim.tcl  parelm.c  pp.c  rewr.c  rw.c  rw.h  simu.c  step.h  structelm.c  sumelm.c  svcupdate.c  tasks.h  tbfinfo.c  tbfupdate.c  (+1 more)
svc/: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  TODO  config.guess  config.sub  configure  configure.in  install-sh
svc/man/: Makefile.in  libsvc.4  svcaterm2label.4  svcaterm2parameter.4  svcaterm2state.4  svcclose.4  svcerror.4  svcgetcomments.4  svcgetcreator.4  svcgetdate.4  svcgetfilename.4  svcgetformatversion.4  svcgetindexflag.4  svcgetinitialstate.4  svcgetnexttransition.4  svcgettype.4  svcgetversion.4  svclabel2aterm.4  svcnewlabel.4  svcnewparameter.4  svcnewstate.4  svcnumlabels.4  svcnumparameters.4  svcnumstates.4  svcnumtransitions.4  svcopen.4  svcparameter2aterm.4  svcputtransition.4  svcsetcomments.4  svcsetcreator.4  svcsetinitialstate.4  svcsettype.4  svcsetversion.4  svcstate2aterm.4
svc/src/: Makefile.in  blocklist.c  blocklist.h  code.c  code.h  compress.c  compress.h  hashtable.c  hashtable.h  huffman.c  huffman.h  lz.c  lz.h  ptable.c  ptable.h  svc.h  svc1.c  svc1.h  svc2.c  svcerrno.h
svctools/: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  TODO  configure  configure.in  install-sh
svctools/man/: Makefile.in  aut2svc.4  bsim.4  svc2aut.4  svc2dot.4  svc2txt.4  svcinfo.4
svctools/src/: Makefile.in  aut2svc.c  aut2svc.h  bsim.c  bsim.h  bsimdata.c  bsimkernel.c  parser.c  parser.y  scanner.c  scanner.l  svc2aut.c  svc2aut.h  svc2dot.c  svc2dot.h  svc2fsm.c  svc2txt.c  svc2txt.h  svcconf.c  svcconf.h  svcinfo.c  svcinfo.h  y.tab.h
